8161053: Passing objects between JavaScript (JavaFX / WebKit) and Java causes a memory leak

Reviewed-by: arajkumar, asrivastava