modules/web/src/main/native/Source/WebCore/platform/java/WebPage.cpp
@@ -1356,6 +1356,7 @@ JNIEXPORT void JNICALL Java_com_sun_webkit_WebPage_twkAddJavaScriptBinding
         JSPropertyAttributes attributes = 0;
         JSObjectSetProperty(globalContext, window, jsname, jsval, attributes, &exception);
     }
+    JSStringRelease(jsname);
 }
 
 JNIEXPORT void JNICALL Java_com_sun_webkit_WebPage_twkReset
